--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>bridging</module>
         <module>composite</module>
         <module>decorator</module>
+        <module>simpleFactory</module>
     </modules>
 
     <properties>
